[gd_scene load_steps=6 format=3 uid="uid://cusph446n0sbw"]

[ext_resource type="Script" path="res://gameplay/groundItems/resourceToBreak/item_to_break.gd" id="1_egy04"]
[ext_resource type="Texture2D" uid="uid://cw7awlj7drk5v" path="res://data/2D assets/world/Stick.png" id="2_0goa5"]
[ext_resource type="PackedScene" uid="uid://de4tue37p42jp" path="res://gameplay/groundItems/resourcePickups/TwigPickup.tscn" id="2_egy04"]
[ext_resource type="PackedScene" uid="uid://c3j5wu03naiiv" path="res://gameplay/foraging/ForagingProgress.tscn" id="4_pn4ke"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egy04"]
size = Vector2(45.2548, 407.294)

[node name="TwigToBreak" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
script = ExtResource("1_egy04")
pickup_item = ExtResource("2_egy04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-17, 11)
rotation = 0.785398
shape = SubResource("RectangleShape2D_egy04")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0goa5")

[node name="ForagePrompt" type="Label" parent="."]
offset_left = -50.0
offset_top = -217.0
offset_right = 65.0
offset_bottom = -194.0
text = "Space to break"

[node name="ForagingProgress" parent="." instance=ExtResource("4_pn4ke")]
visible = false
offset_left = -11.0
offset_top = -185.0
offset_right = 25.0
offset_bottom = -167.0

[connection signal="progress_bar_completed" from="ForagingProgress" to="Area2D" method="_on_foraging_progress_progress_bar_completed"]
